--- a/index.html
+++ b/index.html
@@ -1,13 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="./index.css" rel="stylesheet" />
+
   <title>Document</title>
 </head>
-<body>
-  
-</body>
-</html>
 
+<body>
+  <div class="container">
+    <!-- start page -->
+
+    <button id="startBtn" class="start-btn">Start</button>
+
+    <!-- information page -->
+    <div id=inforContainer class="hide">
+      <div id="inforListContainer" class="infor-container_list">
+        <div class="infor-list">1. 각 문항 당 시간 제한은 10초입니다.</div>
+        <div class="infor-list">2. 마지막에 총점을 보여줍니다.</div>
+        <div class="infor-list">3. 게임을 시작하고 싶으면 start버튼을 누르세요.</div>
+      </div>
+      <div id=inforBtnContainer class="infor-container_btn">
+        <button id="startPageBtn">Page Before </button>
+        <button id="qustionPageBtn">Page Next</button>
+      </div>
+    </div>
+
+    <!-- main page -->
+
+    <div id="mainContainer" class="hide">
+      <div id="codeQuestionContainer">
+        <div id="questionContainer">question</div>
+        <div id="codeContainer">code</div>
+        <div id="nextButtonContainer">
+          <button id="nextPageBtn">Next</button>
+        </div>
+      </div>
+    </div>
+    <div id="answerContainer">
+      <div class="answers" id="firstAnswer">111111111</div>
+      <div class="answers" id="secondAnswer">2222222</div>
+      <div class="answers" id="thirdAnswer">333333333333</div>
+      <div class="answers" id="fourthAnswer">444444444444444</div>
+    </div>
+  </div>
+
+  <!-- final page -->
+
+  <div id="finalContainer" class="hide">
+    <button class="quit-btn">quit</button>
+    <button class="infor-btn">infor</butoon>
+  </div>
+  </div>
+  <script src="./index.js"></script>
+</body>
+
+</html>
